@@ -65,6 +65,7 @@
     <!ENTITY factories SYSTEM "factories.xml">
     <!ENTITY file-removal SYSTEM "file-removal.xml">
     <!ENTITY functions SYSTEM "functions.xml">
+    <!ENTITY gettext SYSTEM "gettext.xml">
     <!ENTITY hierarchy SYSTEM "hierarchy.xml">
     <!ENTITY java SYSTEM "java.xml">
     <!ENTITY install SYSTEM "install.xml">
@@ -251,6 +252,11 @@
   <chapter id="chap-variants">
     <title>Variant Builds</title>
     &variants;
+  </chapter>
+
+  <chapter id="chap-gettext">
+    <title>Internationalization and localization with gettext</title>
+    &gettext;
   </chapter>
 
   <!--
